# ml3-neo

./: .gitignore  README.md  _quarto.yml  how-to-study.qmd  index.qmd  leaderboards.qmd  pixi.toml  refs.bib  syllabus.qmd  theme.css
.github/workflows/: publish-site.yml
figures/: render.py
figures/tikz/: _preamble.tex  conv-receptive.tex  normalization.tex  residual.tex
grader/: pyproject.toml
grader/ml3_grade/: __init__.py  cli.py  config.py  execute.py  instances.py  judge.py  leaderboard.py  leaderboard_render.py  probe.py  scoring.py
grader/ml3_grade/prompts/: judge_system.md
grader/tests/: test_execute.py  test_instances.py  test_judge_extract_json.py  test_scoring.py
homework/01-backprop/: README.qmd  eval.py  meta.yml  rubric.yml  starter.py
homework/02-pytorch/: README.qmd  eval.py  meta.yml  rubric.yml  starter.py
homework/03-mlp-norm/: README.qmd  eval.py  meta.yml  rubric.yml  starter.py
homework/04-cnn-zoo/: README.qmd  eval.py  meta.yml  rubric.yml  starter.py
homework/05-sequence/: README.qmd  eval.py  meta.yml  rubric.yml  starter.py
homework/06-transformer/: README.qmd  eval.py  meta.yml  rubric.yml  starter.py
homework/07-pretrain/: README.qmd  eval.py  meta.yml  rubric.yml  starter.py
homework/08-generative/: README.qmd  eval.py  meta.yml  rubric.yml  starter.py
homework/_template/: README.qmd  eval.py  meta.yml  rubric.yml  starter.py
lectures/01-backprop/: lecture.qmd  slides.qmd
lectures/02-pytorch/: lecture.qmd  slides.qmd
lectures/03-mlp-norm/: lecture.qmd  (+1 more)
scripts/: export_seminars.py  generate_dev_data.py
(+92 files in other folders)
